<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_new">Add New</string>
    <string name="save">Save</string>
    <string name="profile_options">Profile Options</string>
    <string name="only_if_wifi">Only if Wifi is available</string>
    <string name="define_location">Define Location</string>
    <string name="profile_name">Profile Name</string>
    <string name="ftp_server">FTP Server</string>
    <string name="select_profile_type">Select Profile Type</string>
    <string name="profile_count">Profile Count</string>
    <string name="add_profile">Add profile</string>
    <string name="ftp_path">FTP Path</string>
    <string name="ftp_password">FTP Password</string>
    <string name="ftp_username">FTP Username</string>
    <string name="ftp_host">FTP Host</string>
    <string name="local_directory">Local Directory</string>
    <string name="app_name">SyncDroid SD</string>
	<string name="remote_service_started">Remote Service started</string>
	<string name="remote_service_stopped">Remote Service stopped</string>
	<string name="remote_service_connected">Remote Service connected</string>
	<string name="remote_service_disconnected">Remote Service disconnected</string>
	<string name="remote_service_label">Remote Service Label</string>
</resources>
